force-app/main/default/objects/RW_Demand__c/fields/Count_IW__c.field-meta.xml
<CustomField>
    <fullName>Count_IW__c</fullName>
    <label>Count IW</label>
    <summaryForeignKey>Interest_Waiver__c.Demand__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>