force-app/main/default/objects/RW_Demand__c/fields/Count_of_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Attempt__c</fullName>
    <label>Count of Attempt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>