force-app/main/default/objects/RW_Demand__c/fields/Demand_Amount__c.field-meta.xml
<CustomField>
    <fullName>Demand_Amount__c</fullName>
    <formula>RW_Total_Demand_Amount__c +  RW_Total_GST_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Demand Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>