force-app/main/default/objects/RW_Demand__c/fields/Interest_Days__c.field-meta.xml
<CustomField>
    <fullName>Interest_Days__c</fullName>
    <label>Days of Interest Levied</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>