force-app/main/default/objects/RW_Demand__c/fields/Last_Calling_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Calling_Date__c</fullName>
    <label>Last Calling Date</label>
    <type>Date</type>
</CustomField>