force-app/main/default/objects/RW_Demand__c/fields/Net_Interest_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Interest_Amount__c</fullName>
    <label>Net Interest Post Waiver</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>