force-app/main/default/objects/RW_Demand__c/fields/Non_collectible__c.field-meta.xml
<CustomField>
    <fullName>Non_collectible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-collectible</label>
    <type>Checkbox</type>
</CustomField>