force-app/main/default/objects/RW_Demand__c/fields/Payment_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date_Formula__c</fullName>
    <formula>IF(ISNULL( Payment_Date__c ), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Date Formula</label>
    <type>Checkbox</type>
</CustomField>