force-app/main/default/objects/RW_Demand__c/fields/Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Code__c</fullName>
    <formula>Booking__r.Project__r.SAPMaterial_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Code</label>
    <type>Text</type>
</CustomField>