force-app/main/default/objects/RW_Demand__c/fields/PTP_Ageing__c.field-meta.xml
<CustomField>
    <fullName>PTP_Ageing__c</fullName>
    <formula>IF( NOT(ISPICKVAL(RW_Demand_Status__c , &apos;Paid&apos;) ) &amp;&amp; PTP_Date__c &lt; TODAY() , TODAY()-PTP_Date__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PTP Ageing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>