force-app/main/default/objects/RW_Demand__c/fields/Reminder_Type__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Type__c</fullName>
    <label>Reminder Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>