force-app/main/default/objects/RW_Demand__c/fields/RW_Billing_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>RW_Billing_Document_Number__c</fullName>
    <label>Billing Document Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>