force-app/main/default/objects/RW_Demand__c/fields/RW_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>RW_Customer_Number__c</fullName>
    <label>Customer Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>