force-app/main/default/objects/RW_Demand__c/fields/RW_Demand_Aging__c.field-meta.xml
<CustomField>
    <fullName>RW_Demand_Aging__c</fullName>
    <formula>IF(  NOT(ISPICKVAL(RW_Demand_Status__c , &apos;Paid&apos;) ) &amp;&amp; Due_Date__c &lt;  TODAY() , TODAY()-Due_Date__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demand Aging</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>