force-app/main/default/objects/RW_Demand__c/fields/RW_Demand_Amount__c.field-meta.xml
<CustomField>
    <fullName>RW_Demand_Amount__c</fullName>
    <label>Demand Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>