force-app/main/default/objects/RW_Demand__c/fields/RW_Demand_Milestone__c.field-meta.xml
<CustomField>
    <fullName>RW_Demand_Milestone__c</fullName>
    <label>Demand Milestone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>