force-app/main/default/objects/RW_Demand__c/fields/RW_Demand_Status__c.field-meta.xml
<CustomField>
    <fullName>RW_Demand_Status__c</fullName>
    <label>Demand Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Due</fullName>
                <default>true</default>
                <label>Due</label>
            </value>
            <value>
                <fullName>Revoke</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>