force-app/main/default/objects/RW_Demand__c/fields/RW_Total_Demand_Amount__c.field-meta.xml
<CustomField>
    <fullName>RW_Total_Demand_Amount__c</fullName>
    <label>Demand Amount</label>
    <summarizedField>RW_Demand_Item__c.RW_Demand_Item_Amount__c</summarizedField>
    <summaryForeignKey>RW_Demand_Item__c.RW_Demand__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>