force-app/main/default/objects/RW_Demand__c/fields/SAP_Slab_Description__c.field-meta.xml
<CustomField>
    <fullName>SAP_Slab_Description__c</fullName>
    <label>SAP Slab Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>