force-app/main/default/objects/RW_Demand__c/fields/Total_Demand_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Demand_Paid__c</fullName>
    <label>Total Demand Paid</label>
    <summarizedField>RW_Demand_Item__c.Total_Demand_Item_Amount_Paid__c</summarizedField>
    <summaryForeignKey>RW_Demand_Item__c.RW_Demand__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>