force-app/main/default/objects/RW_Demand__c/fields/Total_Interest_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest_Amount__c</fullName>
    <label>Total Interest Levied on Demand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>