force-app/main/default/objects/RW_Demand__c/fields/Total_Interest_Waiver_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest_Waiver_Amount__c</fullName>
    <label>Total Interest Waived on Demand</label>
    <summarizedField>Interest_Waiver__c.Waiver_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Interest_Waiver__c.Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Interest_Waiver__c.Is_Send_To_SAP__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Interest_Waiver__c.Demand__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>