force-app/main/default/objects/RW_Demand__c/fields/Unit_No__c.field-meta.xml
<CustomField>
    <fullName>Unit_No__c</fullName>
    <label>Unit No</label>
    <length>18</length>
    <type>Text</type>
</CustomField>